--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <p>December 2023-Present</p>
             <ul>
                 <li>Made Projects On Customer Requirements</li>
-                <li>Amswered Customer Inquiries Via Emails and Phone</li>
+                <li>Answered Customer Inquiries Via Emails and Phone</li>
             </ul>
           </li>
           <li><h3>My Projects</h3>
