--- a/Birthday project.html
+++ b/Birthday project.html
@@ -1,6 +1,6 @@
 <h1>It's My Birthday</h1>
 <h2>On the 26th January</h2>
-<img src="https://images.unsplash.com/photo-1578985545062-69928b1d9587?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8Y2FrZXxlbnwwfHwwfHx8MA%3D%3D" alt="A Chocolate Cake">
+<img src="https://images.unsplash.com/photo-1578985545062-69928b1d9587?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8Y2FrZXxlbnwwfHwwfHx8MA%3D%3D" alt="A Chocolate Cake" height="250px" width="400px">
 <h3>What to bring:</h3>
 <ul>
     <li>Baloons (I love Baloons)</li>
