--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <hr />
         <h2>Work Experience</h2>
         <ul>
-           <li><h3>Web Developer - <a href="https://www.techoniq.com/" style="color:blue">Techoniq</a></h3>
+           <li><h3>Web Developer - <a href="https://www.techoniq.com/" style="color: blue;">Techoniq</a></h3>
             <a href="https://www.techoniq.com"><img src="./273766823_664657634884290_3471211119549978588_n.jpg" alt="Logo of Techoniq.com"></a>
             <p>December 2023-Present</p>
             <ul>
@@ -29,13 +29,13 @@
             </ul>
           </li>
           <li><h3>My Projects</h3>
-            <h4><a href="./Birthday project.html" style="color:blue">Birthday Invite Project</a></h4>
-            <h4><a href="./Movie Ranking.html" style="color:blue">Movie Ranking Project</a></h4>
+            <h4><a href="./Birthday project.html" style="color: blue;">Birthday Invite Project</a></h4>
+            <h4><a href="./Movie Ranking.html" style="color: blue;">Movie Ranking Project</a></h4>
           </li>
         </ul>
         <hr />
-        <h4><a href="./contact.html" style="color:blue">Contact Me</a></h4>
-        <h4><a href="./about.html" style="color:blue">About Me</a></h4>
+        <h4><a href="./contact.html" style="color: blue;">Contact Me</a></h4>
+        <h4><a href="./about.html" style="color: blue;">About Me</a></h4>
         
     </body>
 
